<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:textSize="26dp"
            android:textColor="#616161"
            android:paddingRight="8dp"
            
            android:text="@string/today" />

        <TextView
            android:id="@+id/current_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:textSize="13dp"
            android:textColor="#797979"
            
            android:text="19 Пт" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|top"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/current_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:textSize="20dp"
	            android:textColor="#017fbd"
                
                android:text="Kiev" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|left|top"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/current_weather_descr"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="bottom"
                
                android:textSize="13dp"
            	android:textColor="#618cae"
                
                android:text="Совсем солнечно" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:textSize="11dp"
            		android:textColor="#909296"
            		
            		android:paddingRight="5dp"
                    
                    android:text="@string/preshure" />

                <TextView
                    android:id="@+id/current_preshure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:textSize="11dp"
            		android:textColor="#5ca7c1"                    
                    
                    android:text="Значение" />

            </LinearLayout>   
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:textSize="11dp"
            		android:textColor="#909296"
            		
            		android:paddingRight="5dp"
                    
                    android:text="@string/wind" />

                <TextView
                    android:id="@+id/current_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:textSize="11dp"
            		android:textColor="#5ca7c1"                    
                    
                    android:text="Значение" />

            </LinearLayout>            
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:textSize="11dp"
            		android:textColor="#909296"
            		
            		android:paddingRight="5dp"
                    
                    android:text="@string/humidity" />

                <TextView
                    android:id="@+id/current_wet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:textSize="11dp"
            		android:textColor="#5ca7c1"                    
                    
                    android:text="Значение" />

            </LinearLayout> 
           
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/current_weather_icon"
                android:layout_width="150dp"
                android:layout_height="126dp"
                android:src="@drawable/d200" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="4dp"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:paddingRight="8dp"
            android:layout_weight="0.5" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                
                android:textSize="10dp"
                android:textColor="#7dbed7"
                
                android:text="@string/now" />

            <TextView
                android:id="@+id/current_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:textSize="34dp"
                android:textColor="#7dbed7"
                
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                
                android:text="22" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:paddingLeft="8dp"
            android:layout_weight="0.5" >

            <TextView
                android:id="@+id/current_next_temp_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:textSize="10dp"
                android:textColor="#017fbd"
                
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                
                android:text="Ночь" />

            <TextView
                android:id="@+id/current_next_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"  
                
                android:textSize="34dp"
                android:textColor="#017fbd"              
                
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                
                android:text="2" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>